fix: Prevent Unicode combining characters from overflowing boundaries

--- a/src/button-dropdown/item-element/styles.scss
+++ b/src/button-dropdown/item-element/styles.scss
@@ -16,6 +16,8 @@
   margin-top: calc(-1 * #{styles.$control-border-width});
   cursor: pointer;
 
+  overflow: hidden;
+
   &.disabled {
     cursor: default;
     color: awsui.$color-text-dropdown-item-disabled;
