--- a/src/internal/components/selectable-item/styles.scss
+++ b/src/internal/components/selectable-item/styles.scss
@@ -14,6 +14,8 @@
   list-style: none;
   z-index: 1;
 
+  overflow: hidden;
+
   border: awsui.$border-divider-list-width solid transparent;
   border-top-color: awsui.$color-border-dropdown-item-default;
   border-bottom-color: awsui.$color-border-dropdown-item-default;
