--- a/src/token-group/styles.scss
+++ b/src/token-group/styles.scss
@@ -27,6 +27,7 @@
   color: awsui.$color-text-body-default;
   height: 100%;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .dismiss-button {
